fix spacing between single line settings
git-svn-id: file:///home/awy/mirror/slim/trunk/server@15725 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Default/slimserver.css
+++ b/HTML/Default/slimserver.css
@@ -1050,7 +1050,7 @@ body.settingsMenu {
 .settingGroup {
 	position: relative;
 	padding-left: 250px;
-	margin-bottom: 10px;
+	margin-bottom: 15px;
 }
 
 .prefHelp {
